RESOLVED FIXED 242749
Web Inspector: capture async stack traces for `queueMicrotask`
https://bugs.webkit.org/show_bug.cgi?id=242749
Summary Web Inspector: capture async stack traces for `queueMicrotask`
Devin Rousso
Reported 2022-07-14 09:16:40 PDT
.
Attachments
Devin Rousso
Comment 1 2022-07-14 09:22:58 PDT
EWS
Comment 2 2022-07-16 16:26:36 PDT
Committed 252543@main (6545a6f6c7c3): <https://commits.webkit.org/252543@main> Reviewed commits have been landed. Closing PR #2409 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-07-16 16:27:15 PDT
Note You need to log in before you can comment on or make changes to this bug.