Web Inspector: capture async stack traces for `queueMicrotask` https://bugs.webkit.org/show_bug.cgi?id=242749

Reviewed by Patrick Angle.

* Source/JavaScriptCore/runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::queueMicrotask):
Add a `Debugger` instrumentation hook.

* Source/JavaScriptCore/runtime/JSMicrotask.cpp:
(JSC::JSMicrotask::run):
* Source/WebCore/bindings/js/JSDOMMicrotask.cpp:
(WebCore::JSDOMMicrotask::run):
Pass along the `JSC::Microtask` to use (the pointer of) in a `HashMap` that holds a identifier for
that async task.

* Source/JavaScriptCore/debugger/Debugger.h:
* Source/JavaScriptCore/debugger/Debugger.cpp:
(JSC::Debugger::didQueueMicrotask): Added.
(JSC::Debugger::willRunMicrotask):
(JSC::Debugger::didRunMicrotask):
* Source/JavaScriptCore/inspector/agents/InspectorDebuggerAgent.h:
* Source/JavaScriptCore/inspector/agents/InspectorDebuggerAgent.cpp:
(Inspector::InspectorDebuggerAgent::didScheduleAsyncCall):
(Inspector::InspectorDebuggerAgent::willDispatchAsyncCall):
(Inspector::InspectorDebuggerAgent::didDispatchAsyncCall):
(Inspector::InspectorDebuggerAgent::didQueueMicrotask): Added.
(Inspector::InspectorDebuggerAgent::willRunMicrotask):
(Inspector::InspectorDebuggerAgent::didRunMicrotask):
(Inspector::InspectorDebuggerAgent::didPause):
(Inspector::InspectorDebuggerAgent::didClearAsyncStackTraceData): Added.
Call the existing `didScheduleAsyncCall`, `willDispatchAsyncCall`, and `didDispatchAsyncCall`. Also
allow multiple async calls to be tracked at the same time.

* Source/WebCore/inspector/agents/WebDebuggerAgent.cpp:
(WebCore::WebDebuggerAgent::didClearAsyncStackTraceData):
Don't forget to call the base class method too.

* LayoutTests/inspector/debugger/async-stack-trace-basic.html:
* LayoutTests/inspector/debugger/async-stack-trace-basic-expected.txt:

* LayoutTests/inspector/debugger/resources/async-stack-trace-test.js:
(addAsyncStackTraceTestCase):
Drive-by: Adjust the test to make sure listeners are added before relevant events are dispatched.

Canonical link: https://commits.webkit.org/252543@main